--- a/public/index.ejs
+++ b/public/index.ejs
@@ -23,8 +23,9 @@
       function renderMessage(message) {
         $(".messages").append(
           '<div class="message">' +
+            "<strong>" +
             message.author +
-            "<strong></strong>: " +
+            "</strong>: " +
             message.message +
             "</div>"
         );
